tasks/frontend-creative-tools-shapeshift-grid/solution/app/styles.css
/* ... */
.new-input-button::before, .new-primary-btn::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 0;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #0000FF;
  z-index: 1;
}

.new-input-button:hover::before, .new-primary-btn:hover::before {
  height: 100%;
  -webkit-transition: all 0s ease-in-out;
  transition: all 0s ease-in-out;
}

.new-input-button.yellow, .new-primary-btn.yellow {
  background-color: #FFFF00;
  color: #000000;
}

.new-input-button.yellow span, .new-input-button.yellow svg, .new-primary-btn.yellow span, .new-primary-btn.yellow svg {
  position: relative;
  z-index: 2;
  color: #000000;
  font-size: 14px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.new-input-button.yellow::after, .new-primary-btn.yellow::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
  background-color: #FFFF00;
}

.new-input-button.yellow::before, .new-primary-btn.yellow::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 0;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #0000FF;
  z-index: 1;
}

.new-input-button.yellow:hover::before, .new-primary-btn.yellow:hover::before {
  height: 100%;
  -webkit-transition: all 0s ease-in-out;
  transition: all 0s ease-in-out;
}

.new-input-button.yellow:hover span, .new-primary-btn.yellow:hover span {
  color: #ffffff;
  -webkit-transition: all 0s ease-in-out;
  transition: all 0s ease-in-out;
}

.new-input-button.yellow:hover svg path, .new-primary-btn.yellow:hover svg path {
  fill: #ffffff;
  -webkit-transition: all 0s ease-in-out;
  transition: all 0s ease-in-out;
}

.new-input-button.white, .new-primary-btn.white {
  background-color: #ffffff;
  color: #000000;
}

.new-input-button.white span, .new-input-button.white svg, .new-primary-btn.white span, .new-primary-btn.white svg {
  position: relative;
  z-index: 2;
  color: #000000;
  font-size: 14px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.new-input-button.white::after, .new-primary-btn.white::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
  background-color: #ffffff;
}

.new-input-button.white::before, .new-primary-btn.white::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 0;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #0000FF;
  z-index: 1;
}

.new-input-button.white:hover::before, .new-primary-btn.white:hover::before {
  height: 100%;
  -webkit-transition: all 0s ease-in-out;
  transition: all 0s ease-in-out;
}

.new-input-button.white:hover span, .new-primary-btn.white:hover span {
  color: #ffffff;
  -webkit-transition: all 0s ease-in-out;
  transition: all 0s ease-in-out;
}

.new-input-button.white:hover svg path, .new-primary-btn.white:hover svg path {
  fill: #ffffff;
  -webkit-transition: all 0s ease-in-out;
  transition: all 0s ease-in-out;
}

.new-input-button.outline, .new-primary-btn.outline {
  background-color: transparent;
  color: #ffffff;
}

.new-input-button.outline::after, .new-primary-btn.outline::after {
  border: 1px solid #ffffff;
}

.new-input-button.outline svg path, .new-primary-btn.outline svg path {
  fill: #ffffff;
}

@media (max-width: 576px) {
  .new-input-button, .new-primary-btn {
    gap: 46px;
  }
}

.new-input-button svg path, .new-primary-btn svg path {
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

.new-input-button:hover, .new-input-button:focus, .new-primary-btn:hover, .new-primary-btn:focus {
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

.new-input-button:hover svg path, .new-input-button:focus svg path, .new-primary-btn:hover svg path, .new-primary-btn:focus svg path {
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

@media (max-width: 576px) {
  #teaser-page #about .new-primary-btn {
    min-width: 75%;
  }
}

